--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -119,4 +119,16 @@
   right: 20px;
 }
 
-/* 반응형 디자인 - 태블릿 */
+/* 다크 모드 스타일 */
+.dark-mode {
+  background-color: #121212;
+  color: #ffffff;
+}
+
+.dark-mode input,
+.dark-mode textarea {
+  background-color: #333333;
+  color: #ffffff;
+  border-color: #666666;
+}
+
