--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -92,3 +92,15 @@
     text-align: center;
     margin-bottom: 10px;
   }
+  /* 다크 모드 스타일 */
+.dark-mode {
+  background-color: #121212;
+  color: #ffffff;
+}
+
+.dark-mode input,
+.dark-mode textarea {
+  background-color: #333333;
+  color: #ffffff;
+  border-color: #666666;
+}
