--- a/src/pages/PostDetail.css
+++ b/src/pages/PostDetail.css
@@ -73,3 +73,15 @@
   .error {
     color: #d9534f;
   }
+  /* 다크 모드 스타일 */
+.dark-mode {
+  background-color: #121212;
+  color: #ffffff;
+}
+
+.dark-mode input,
+.dark-mode textarea {
+  background-color: #333333;
+  color: #ffffff;
+  border-color: #666666;
+}
