--- a/src/pages/CreatePost.css
+++ b/src/pages/CreatePost.css
@@ -18,14 +18,14 @@
   .input-group {
     margin-bottom: 20px;
   }
-  
+  /* 해더 영역 검색창 디자인 */
   input[type="text"],
   input[type="url"],
   textarea {
-    width: 500px;
+    width: 90%;
     padding: 10px;
     border: 1px solid #ddd;
-    border-radius: 30px 0px 0px 30px;
+    border-radius: 30px 30px 30px 30px;
     font-size: 16px;
   }
   
